# incheon-port-cutoff-radar

./: .gitignore  README.md  docker-compose.yml  mkdocs.yml
.github/workflows/: deploy-pages.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: cache.py  config.py  database.py  main.py
backend/app/api/: middleware.py  routes.py
backend/app/clients/: external.py
backend/app/engine/: config.py  risk.py
backend/app/models/: orm.py  schemas.py
backend/app/normalizers/: source_normalizer.py
backend/app/repositories/: dispatch_repo.py
backend/app/scheduler/: ingestion.py
backend/app/services/: dispatch_service.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_normalizers.py  test_risk_engine.py
docs/: demo.md  index.md  presentation.md  roadmap.md
docs/guide/: api.md  deployment.md  engine.md  quickstart.md
docs/specs/: 00_project_overview.md  01_prd.md  02_mvp_spec.md  03_architecture.md  04_data_spec.md  05_api_spec.md  06_db_schema.md  07_frontend_spec.md  08_backend_spec.md  09_dev_plan.md  10_test_plan.md  11_risk_and_decisions.md  12_pitch_one_pager.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: 404.html
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts  mock.ts
frontend/src/components/: FreshnessIndicator.tsx  Layout.tsx  LoadingState.tsx  ReasonCards.tsx  ReasonChart.tsx  RiskBadge.tsx  SimulationView.tsx
(+2 files in other folders)
